--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
 <h1>marubatsu_game</h1>
     <div id="root"></div>
+<p>
+    <button onclick="countUp();">カウントアップ</button>
+    <span id="countUpButton" style="margin-left: 10px;">0</span>
+</p>
     <script src="dist/bundle.js"></script>
     <p>hello</p>
 </body>
