コンストラクタ追加

--- a/index.html
+++ b/index.html
@@ -8,14 +8,25 @@
 </head>
 
 <body>
-<h1>marubatsu_game</h1>
+    <h1>marubatsu_game</h1>
     <div id="root"></div>
-<p>
-    <button onclick="countUp();">カウントアップ</button>
-    <span id="countUpButton" style="margin-left: 10px;">0</span>
-</p>
+    <table width="350" height="350" border="1">
+        <tr>
+            <td>[0][0]</td>
+            <td>[0][1]</td>
+            <td>[0][2]</td>
+        </tr>
+        <tr>
+            <td>[1][0]</td>
+            <td>[1][1]</td>
+            <td>[1][2]</td>
+        </tr>
+        <tr>
+            <td>[2][0]</td>
+            <td>[2][1]</td>
+            <td>[2][2]</td>
+        </tr>
+    </table>
     <script src="dist/bundle.js"></script>
-    <p>hello</p>
 </body>
-
 </html>
